--- a/templates/shree_shyam_tv.html
+++ b/templates/shree_shyam_tv.html
@@ -286,7 +286,7 @@
             <div class="flex flex-col 2xl:flex-row gap-24">
                 <div class="2xl:w-1/4">
                     <h2 class="text-7xl font-black text-teal-950 mb-12 font-serif leading-none tracking-tighter">Post Your Kirtan  <br><span class="text-orange-500">Promotion</span></h2>
-                    <form onsubmit="submitKirtan(event)" class="space-y-6 p-12 bg-teal-50 rounded-[4rem] border-2 border-teal-100 shadow-inner">
+                    <form onsubmit="submitKirtan(event)"  method="post" class="space-y-6 p-12 bg-teal-50 rounded-[4rem] border-2 border-teal-100 shadow-inner">
                         <div class="space-y-5">
                             <input type="text" name="kirtanName" required placeholder="Event Title *" class="w-full p-6 border-4 border-white rounded-3xl outline-none focus:border-orange-500 text-xl font-bold">
                             <input type="text" name="kirtanLocation" required placeholder="Full Address *" class="w-full p-6 border-4 border-white rounded-3xl outline-none">
