--- a/templates/shree_shyam_tv.html
+++ b/templates/shree_shyam_tv.html
@@ -248,7 +248,7 @@
                             
                         </div>
                     </div>
-                    <div class="carousel-slide absolute inset-0 bg-cover bg-center" style="background-image: url('https://i.postimg.cc/VsgV6tjV/16087284247fa8a22fc8eec0922632fff4289ec9a1.jpg');">
+                    <div class="carousel-slide absolute inset-0 bg-cover bg-center" style="background-image: url('https://i.postimg.cc/kD3JWg1r/23e29983-1602-4141-ac8a-9ffe3ce0e5d1.png');">
                         <div class="bg-black/40 h-full w-full flex flex-col items-center justify-center text-center">
                            
                         </div>
