--- a/templates/shree_shyam_tv.html
+++ b/templates/shree_shyam_tv.html
@@ -212,7 +212,11 @@
     <header class="sticky top-0 bg-teal-950 shadow-2xl z-50 w-full border-b border-white/5">
         <nav class="w-full px-8 py-5 flex justify-between items-center">
             <div class="flex items-center space-x-4">
-                <div class="bg-[#FF9933] p-2.5 rounded-2xl shadow-lg border border-white/20"><span class="text-white font-black text-2xl">SSTV</span></div>
+                <div class="w-[70px] h-[70px]">
+                    <img src="logo.png" 
+                        alt="Shree Shyam TV Logo" 
+                        class="w-full h-full">
+                </div>
                 <div class="text-4xl font-black text-amber-400 tracking-tighter hidden md:block font-serif">Shree Shyam TV</div>
             </div>
             <div class="hidden lg:flex space-x-10 items-center">
@@ -323,8 +327,11 @@
                 </div>
                 <div class="flex justify-center">
                     <div class="w-[450px] h-[800px] bg-[#011a1a] rounded-[6rem] border-[20px] border-[#111827] shadow-[0_0_150px_rgba(0,0,0,0.8)] flex flex-col items-center justify-center relative transform hover:rotate-3 transition duration-1000">
-                        <div class="bg-orange-500 p-16 rounded-[4rem] shadow-[0_20px_50px_rgba(0,0,0,0.5)] mb-16 scale-125"><span class="text-white font-black text-[5rem]">SSTV</span></div>
-                        <h4 class="font-black text-teal-200 text-5xl uppercase tracking-tighter">SHREE SHYAM TV</h4>
+                        <div class="w-[200px] h-[200px]">
+                            <img src="logo.png" 
+                                alt="Shree Shyam TV Logo" 
+                                class="w-full h-full">
+                        </div>
                         <div class="absolute bottom-16 w-32 h-2 bg-gray-800 rounded-full"></div>
                     </div>
                 </div>
